--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -80,7 +80,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "data = pd.read_csv(\"Diabets_World.csv\")\n",
+    "data = pd.read_csv(\"data/Diabets_World.csv\")\n",
     "data.head()\n",
     "\n",
     "# Беремо 12 країну це CZE і фільтруємо по ній\n",
